Make VisibleUnits::ComputeTextRect() return unified IntRect

Only Range uses Vector<IntRect> but it unifies and return a IntRect.
Just unify in VisibleUnits::ComputeTextRect() directly.

TEST=No change in behavior
BUG=712986

Review-Url: https://codereview.chromium.org/2891273003
Cr-Commit-Position: refs/heads/master@{#473185}

Former-commit-id: d77cd716740a94334fc7c98749876f4a013b8322