third_party/WebKit/Source/core/editing/VisibleUnits.h
@@ -342,7 +342,7 @@ CORE_EXPORT bool RendersInDifferentPosition(const Position&, const Position&);
 CORE_EXPORT Position SkipWhitespace(const Position&);
 CORE_EXPORT PositionInFlatTree SkipWhitespace(const PositionInFlatTree&);
 
-CORE_EXPORT Vector<IntRect> ComputeTextRects(const EphemeralRange&);
+CORE_EXPORT IntRect ComputeTextRect(const EphemeralRange&);
 CORE_EXPORT Vector<FloatQuad> ComputeTextQuads(const EphemeralRange&);
 
 }  // namespace blink
